--- a/index.html
+++ b/index.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Invitación Cena Navideña</title>
+</head>
+<body>
+  <div class="invitation-card">
+    <div class="card-header">
+      <h1>Cena Navideña</h1>
+    </div>
+    <div class="card-body">
+      <p>Te invitamos a compartir una noche mágica llena de alegría y tradición.</p>
+      <p><strong>Fecha:</strong> 24 de diciembre de 2024</p>
+      <p><strong>Hora:</strong> 8:00 PM</p>
+      <p><strong>Ubicación:</strong> Restaurante “El Rincón de Navidad”</p>
+      <p>¡Tu presencia hará que esta noche sea aún más especial!</p>
+      <input type="text" id="guest-name" placeholder="Escribe tu nombre">
+    </div>
+    <div class="card-footer">
+      <button id="rsvp-btn">Confirmar Asistencia</button>
+    </div>
+  </div>
+
+  <div id="guest-list-container" style="display:none;">
+    <h2>Lista de Invitados</h2>
+    <ul id="guest-list"></ul>
+  </div>
+
+  <!-- Ventana emergente elegante con efecto parallax -->
+  <div id="confirmation-popup" class="popup" style="display: none;">
+    <div class="popup-content">
+      <h2>¡Gracias por Confirmar tu Asistencia!</h2>
+      <p>Tu nombre ha sido añadido a la lista de invitados.</p>
+      <button id="close-popup">Cerrar</button>
+    </div>
+  </div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
+    import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
+
+    // Configuración de Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyD6ryHs-fQQMyhwKhVtDLGCMI05Q9SwMtk",
+      authDomain: "invitacionnavidad-14f73.firebaseapp.com",
+      projectId: "invitacionnavidad-14f73",
+      storageBucket: "invitacionnavidad-14f73.firebasestorage.app",
+      messagingSenderId: "313209443762",
+      appId: "1:313209443762:web:dc0671ce2da5d0846d00ab",
+      measurementId: "G-KJPSS0D8GR"
+    };
+
+    // Inicializa Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // Referencias a los elementos de la página
+    const rsvpButton = document.getElementById("rsvp-btn");
+    const guestNameInput = document.getElementById("guest-name");
+    const guestListContainer = document.getElementById("guest-list-container");
+    const guestList = document.getElementById("guest-list");
+
+    // Función para mostrar la lista de invitados
+    const fetchGuests = async () => {
+      const querySnapshot = await getDocs(collection(db, "guests"));
+      guestList.innerHTML = "";
+      querySnapshot.forEach((doc) => {
+        const li = document.createElement("li");
+        li.textContent = doc.data().name;
+        const deleteBtn = document.createElement("button");
+        deleteBtn.textContent = "Eliminar";
+        deleteBtn.onclick = () => deleteGuest(doc.id);
+        li.appendChild(deleteBtn);
+        guestList.appendChild(li);
+      });
+    };
+
+    // Función para agregar un nuevo invitado
+    const addGuest = async (name) => {
+      await addDoc(collection(db, "guests"), { name });
+      fetchGuests(); // Actualiza la lista de invitados
+    };
+
+    // Función para eliminar un invitado
+    const deleteGuest = async (id) => {
+      await deleteDoc(doc(db, "guests", id));
+      fetchGuests(); // Actualiza la lista de invitados
+    };
+
+    // Evento de confirmación de asistencia
+    rsvpButton.addEventListener("click", () => {
+      const name = guestNameInput.value.trim();
+      if (name) {
+        addGuest(name);
+        showConfirmationPopup(name);
+        guestNameInput.value = ""; // Limpia el campo
+      }
+    });
+
+    // Función para mostrar la ventana emergente de confirmación con efecto parallax
+    const showConfirmationPopup = (name) => {
+      const popup = document.getElementById("confirmation-popup");
+      popup.style.display = "flex";
+      const closeButton = document.getElementById("close-popup");
+      closeButton.onclick = () => {
+        popup.style.display = "none"; // Cierra la ventana emergente
+      };
+    };
+
+    // Función para mostrar/ocultar la lista de invitados al presionar la tecla "v"
+    document.addEventListener("keydown", (event) => {
+      if (event.key === "v") {
+        guestListContainer.style.display = guestListContainer.style.display === "none" ? "block" : "none";
+        fetchGuests(); // Actualiza la lista al mostrarla
+      }
+    });
+  </script>
+
   <style>
+    /* Estilos de la tarjeta de invitación */
     body {
       font-family: 'Georgia', serif;
       background: linear-gradient(135deg, #1e1e2f, #4a5471);
@@ -13,6 +128,8 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
+      overflow: hidden;
+      position: relative;
     }
 
     .invitation-card {
@@ -23,7 +140,6 @@
       width: 350px;
       text-align: center;
       animation: fadeIn 1s ease-in-out;
-      position: relative;
     }
 
     .card-header {
@@ -66,37 +182,6 @@
       background: #e63946;
     }
 
-    input[type="text"] {
-      width: 80%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
-      margin-top: 10px;
-    }
-
-    .popup-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-
-    .confirmation-popup {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      text-align: center;
-      animation: fadeIn 0.5s ease;
-    }
-
     @keyframes fadeIn {
       from {
         opacity: 0;
@@ -108,99 +193,75 @@
       }
     }
 
-    .visitor-list {
+    /* Estilos para la ventana emergente */
+    .popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
       display: none;
+      justify-content: center;
+      align-items: center;
+      animation: fadeInParallax 0.5s ease-in-out;
+    }
+
+    .popup-content {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+      width: 300px;
+      transform: translateY(-30px); /* Inicialmente desplazada */
+      animation: popupSlideIn 0.5s ease-in-out;
+    }
+
+    .popup-content h2 {
+      font-size: 1.5rem;
+      color: #e63946;
+    }
+
+    .popup-content p {
+      font-size: 1rem;
+      color: #333;
+    }
+
+    .popup-content button {
+      background-color: #f4a261;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    .popup-content button:hover {
+      background-color: #e63946;
+    }
+
+    @keyframes popupSlideIn {
+      from {
+        transform: translateY(-50px);
+      }
+      to {
+        transform: translateY(0);
+      }
+    }
+
+    /* Efecto parallax */
+    @keyframes fadeInParallax {
+      from {
+        opacity: 0;
+        transform: translateY(-100px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
-</head>
-<body>
-  <div class="invitation-card">
-    <div class="card-header">
-      <h1>Cena Navideña</h1>
-    </div>
-    <div class="card-body">
-      <p>Te invitamos a compartir una noche mágica llena de alegría y tradición.</p>
-      <p><strong>Fecha:</strong> 16 de diciembre de 2024</p>
-      <p><strong>Hora:</strong> 6:00 PM</p>
-      <p><strong>Ubicación:</strong> Cimatorio #224 Col. Loma Hermosa</p>
-      <p>¡Tu presencia hará que esta noche sea aún más especial!</p>
-      <input type="text" id="nameInput" placeholder="Ingresa tu nombre">
-    </div>
-    <div class="card-footer">
-      <button id="confirmBtn">Confirmar Asistencia</button>
-    </div>
-  </div>
-
-  <!-- Popup -->
-  <div class="popup-overlay" id="popupOverlay">
-    <div class="confirmation-popup">
-      <p>¡Gracias por confirmar tu asistencia!</p>
-      <button id="closePopup">Cerrar</button>
-    </div>
-  </div>
-
-  <!-- Visitor List -->
-  <div class="visitor-list" id="visitorList">
-    <h2>Lista de Invitados</h2>
-    <ul id="list"></ul>
-  </div>
-
-  <script>
-    const nameInput = document.getElementById("nameInput");
-    const confirmBtn = document.getElementById("confirmBtn");
-    const popupOverlay = document.getElementById("popupOverlay");
-    const closePopup = document.getElementById("closePopup");
-    const visitorList = document.getElementById("visitorList");
-    const list = document.getElementById("list");
-
-    // Load saved names from localStorage
-    let names = JSON.parse(localStorage.getItem("names")) || [];
-    renderList();
-
-    confirmBtn.addEventListener("click", () => {
-      const name = nameInput.value.trim();
-      if (name) {
-        names.push(name);
-        localStorage.setItem("names", JSON.stringify(names));
-        renderList();
-        nameInput.value = "";
-        popupOverlay.style.display = "flex"; // Show popup
-      } else {
-        alert("Por favor, ingresa tu nombre.");
-      }
-    });
-
-    closePopup.addEventListener("click", () => {
-      popupOverlay.style.display = "none"; // Hide popup
-    });
-
-    function renderList() {
-      list.innerHTML = "";
-      names.forEach((name, index) => {
-        const listItem = document.createElement("li");
-        listItem.textContent = name;
-
-        const deleteBtn = document.createElement("button");
-        deleteBtn.textContent = "Eliminar";
-        deleteBtn.style.marginLeft = "10px";
-        deleteBtn.addEventListener("click", () => {
-          names.splice(index, 1);
-          localStorage.setItem("names", JSON.stringify(names));
-          renderList();
-        });
-
-        listItem.appendChild(deleteBtn);
-        list.appendChild(listItem);
-      });
-    }
-
-    // Toggle visitor list visibility
-    document.addEventListener("keypress", (e) => {
-      if (e.key === "v") {
-        visitorList.style.display =
-          visitorList.style.display === "block" ? "none" : "block";
-      }
-    });
-  </script>
 </body>
 </html>
